--- a/m4r/views/javascript.erb
+++ b/m4r/views/javascript.erb
@@ -1,32 +1,11 @@
-<!-- <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script> -->
-
-  <script type="text/javascript" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.5.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
-    var jq = jQuery.noConflict();
-    </script>  
-  <!-- <script type="text/javascript" src="/js/jquery_002.js"></script>
-  <script type="text/javascript" src="/js/ui.js"></script>
-  <script type="text/javascript" src="/js/effects_002.js"></script>
-  <script type="text/javascript" src="/js/effects.js"></script>   -->
-  <script type="text/javascript" src="/js/tipsy.js"></script>
-  <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
-
-<!-- <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script> -->
+<% if @page.type != "page" %>
+<script type="text/javascript" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.5.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+var jq = jQuery.noConflict();
+</script>  
+<script type="text/javascript" src="/js/tipsy.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/tmpl.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
-<% if PLATFORM_API_URL =~ /worldbank/ %>
-<% else %>
-<!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.js"></script> -->
-<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/raphael.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.raphael.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.bar.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.line.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.dot.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/g.pie.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/jquery.tablesorter.min.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visualizer.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/jquery-css-transform.js?1279556727" type="text/javascript"></script>
-<script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visual_creator.js?1279556727" type="text/javascript"></script>
-<% end %>
 <script src="/script/map.js" type="text/javascript"></script>
+<% end %>
