Small pie chart for countries

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -811,7 +811,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var opts = {}
 		var width = 410;
 		var char_length = 25;
-		if( self.country == "World" || parseInt(self.country_attrs["locations_count"].replace(",","")) > 400) {
+		if( self.country == "World" || parseInt(self.country_attrs["projects_count"].replace(",","")) > 100) {
 		    width = 640;
 		    char_length = 47;
 		    }
