--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -157,14 +157,17 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 	  this.sector_names = {};
 	  this.sector_codes = {};
-	  jq.each(self.sectors, function(index, sector) {
-		  if(country_attrs.sectors !== undefined && country_attrs.sectors !== null && country_attrs.sectors[sector.name] !== null) { 
-			sector.funding = country_attrs.sectors[sector.name];
-			self.total_funding += country_attrs.sectors[sector.name];
-		  }
-		  self.sector_names[sector.name.toLowerCase().trim()] = index; 
-		  self.sector_codes[sector.sector_code] = sector;
-	 });
+	  var sector;
+          for( var index in self.sectors){
+                  sector = self.sectors[index];
+                  if(country_attrs.sectors !== undefined && country_attrs.sectors !== null && country_attrs.sectors[sector.name] !== null) {
+                        sector.funding = country_attrs.sectors[sector.name];
+                        self.total_funding += country_attrs.sectors[sector.name];
+                  }
+                  self.sector_names[sector.name.toLowerCase().trim()] = index;
+                  self.sector_codes[sector.sector_code] = sector;
+        }
+
 	 if(map_id !== undefined && map_id !== null && map_id.length != 0){
 		 this.map = new F1.Maker.Map( { dom_id:"wb_map",map_id:map_id, 
 		 uiZoom: false,uiLayers: false,uiLegend: false,uiStyles: true,
