--- a/m4r/views/sidebar.erb
+++ b/m4r/views/sidebar.erb
@@ -20,7 +20,7 @@
     <div id="chart-right-graph"></div>
     <br class="clear" />
   </div>        
-
+    <span>funding for local and national activities</span>
     <a class="moreData" href="http://data.worldbank.org/country/<%= @page[:shortname] %>" title="more data">MORE DATA</a>
     <br class="clear" />
   </div>
