--- a/m4r/views/initialize.erb
+++ b/m4r/views/initialize.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript" charset="utf-8">
-  var wb = null;
-  function onload() {
+var wb = null;
+function onload() {
   wb = new F1.WorldBank();
   <% if @page[:page_type] == "country" %>
 
@@ -35,5 +35,9 @@
   wb.init("<%= (@page[:map] || "").to_s %>",  "<%= (@page[:name] || "").to_s %>",  "<%= (@page[:region] || 'World').to_s %>", {projects_count: '<%= commify(@page[:projects_count]) %>', locations_count: '<%= commify(@page[:locations_count]) %>', sectors: sectors, regions: regions, thematic_area: "<%= @additional_controls || "m4r" %>" }, <%= @embed || false %>);
   
   <% end %>
+
+    jq("#map_embed_container").width(parseInt(getQuerystring("width", 200), 10))
+    jq("#map_embed_container").height(parseInt(getQuerystring("height", 200), 10))
+
   }
 </script>
