--- a/m4r/views/initialize.erb
+++ b/m4r/views/initialize.erb
@@ -36,8 +36,10 @@ function onload() {
   
   <% end %>
 
-  jq("#map_embed_container").width(parseInt(getQuerystring("width", 200), 10))
-  jq("#map_embed_container").height(parseInt(getQuerystring("height", 200), 10))
+    $.ready( function() {
+          jq("#map_embed_container").width(parseInt(getQuerystring("width", 200), 10));
+          jq("#map_embed_container").height(parseInt(getQuerystring("height", 200), 10));
+    } );
 
   }
 </script>
