Updating infowindow styling

--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -362,7 +362,7 @@ ul.links li, ul.links li a{
     height: 350px;
     width: 300px;
     background-color: #D9DCCF;
-    opacity: 0.7;
+    opacity: 0.9;
     left: 70px;
     top: 400px;
     clear: both;    
@@ -373,8 +373,8 @@ ul.links li, ul.links li a{
 #infowindow #project_info h2 { font-size: 1.4em; border-bottom: 1px solid #888;}
 #infowindow #project_info h3 { padding-top: 2px;}
 #project_info #project_title { /*border: 1px solid #888;*/
-    padding: 5px 3px;
-    margin: 5px 0 5px -3px; }
+    padding: 5px 13px;
+    margin: 5px -10px 5px -10px; }
 #project_tabs {border-bottom: 1px solid #888; margin-top: 10px;}
 .tab_control {padding-right: 10px; cursor: pointer}
 .tab_active { font-weight: bold}
