--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -374,7 +374,9 @@ ul.links li, ul.links li a{
 #infowindow #project_info h3 { padding-top: 2px;}
 #project_info #project_title { /*border: 1px solid #888;*/
     padding: 5px 13px;
-    margin: 5px -10px 5px -10px; }
+    margin: 5px -10px 5px -10px; 
+    background-color: #900;
+    color: #FFF;}
 #project_tabs {border-bottom: 1px solid #888; margin-top: 10px;}
 .tab_control {padding-right: 10px; cursor: pointer}
 .tab_active { font-weight: bold}
