--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -249,7 +249,9 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			self.map.addHighlight(self.stylelayers["Project Locations"].guid,{expression: highlightExpression});
     	
         var html = tmpl(info_templates.project, 
-                            {icon: self.sectors[self.sector_names[project["mjsector 1"].toLowerCase().trim()]].icon,
+                            {	image: self.projects[project["project id"]]["Results Image"],
+                            	results_blurb: self.projects[project["project id"]]["Results Blurb"],
+                            	icon: self.sectors[self.sector_names[project["mjsector 1"].toLowerCase().trim()]].icon,
                             	title: project["project title"],sector: project["mjsector 1"],adm1: project["adm1"], adm2: project["adm2"], project_id: project["project id"], geoname: project["geoname"], 
                             precision_description: project["precision description"], development_objective: project["development objective"], results: project["results"]  });
 
